<resources>
    <string name="app_name">Event Managment</string>
    <string name="event_name">Event Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="event_management_login">Event Management Login</string>
    <string name="create_account">Create Account</string>
    <string name="emailr">Email</string>
    <string name="passwordr">Password</string>
    <string name="registerr">Register</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="event_type_seminar_workshop">Event Type (Seminar/Workshop)</string>
    <string name="event_category_it_cs_mba">Event Category (IT/CS/MBA...)</string>
    <string name="event_code_id">Event Code/ID</string>
    <string name="start_date_time"><![CDATA[Start Date & Time]]></string>
    <string name="end_date_time"><![CDATA[End Date & Time]]></string>
    <string name="venue">Venue</string>
    <string name="organizer_name">Organizer Name</string>
    <string name="contact_number_email">Contact Number/Email</string>
    <string name="coordinator_name_s">Coordinator Name(s)</string>
    <string name="department">Department</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="registration_start_date">Registration Start Date</string>
    <string name="registration_end_date">Registration End Date</string>
    <string name="max_participants">Max Participants</string>
    <string name="eligibility_criteria">Eligibility Criteria</string>
    <string name="rewards_certificates">Rewards/Certificates</string>
    <string name="event_poster_link">Event Poster Link</string>
    <string name="add_event">Add Event</string>
    <string name="save_event">Save Event</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="my_events">My Events</string>
    <string name="myevents">My Events</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="All_Events">all_events</string>
</resources>